# webdevlab

./: .LICENSE  .gitignore  README.md  auto_deploy.sh  et --soft 077261dc801722b5bea2969c403b99ba1f9659a9^  requirements.txt  webdevlab.code-workspace
blog-client/: nuxt.config.ts  package.json
blog-server/: .gitignore  Cargo.toml  README.md  code.md
blog/server/: .env.example  .gitignore  Cargo.toml  README.md
blog/server/src/: api_doc.rs  config.rs  errors.rs  main.rs
blog/server/src/api/: auth.rs  categories.rs  mod.rs  posts.rs
blog/server/src/db/: postgres.rs  redis.rs
blog/server/src/models/: category.rs  post.rs  user.rs
blog/server/src/services/: auth_service.rs  cache_service.rs  category_service.rs  mod.rs  post_service.rs
blog/server/src/utils/: email.rs  jwt.rs  middleware.rs  mod.rs  password.rs
client/: .env.example  .eslintrc  .eslintrc.js  .prettierrc.js  Dockerfile  Dockerfile.dev  Dockerfile.test  GraphQLQueries.md  README.md  app.vue  chat-gpt.md  gatsby-config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
client.backup/: Dockerfile  README.md  gatsby-config.ts  package-lock.json  package.json
coursetutorials/: db.sqlite3  manage.py
design/: App.tsx  index.css
res/: google-tag-manager.txt  logo.xcf
server/: .bashrc  .env  .env.development  .env.example  .env.test  .pre-commit-config.yaml  READNE.md  auto_run.sh  blog_data.json  blog_seed.py  conftest.py  copy_database.py  db.sqlite3  dbtest.sqlite3  google-drive-credentials-example.json  gunicorn.service  run.sh  (+3 more)
(+166 files in other folders)
