[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = "1.0.219"
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
redis = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"