[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = "1.0.219"
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "time", "chrono", "uuid"] }
redis = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] } # optional if using Uuid::new_v4()
validator = { version = "0.17", features = ["derive"] }
lettre = "0.11.18"
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
